--- a/templates/notenough.html
+++ b/templates/notenough.html
@@ -14,7 +14,7 @@
     {% endif %}
     <div >
         {% for key, value in wrappedLinks.items() %}
-            <a style = "display: block; text-align: center; max-width: 200px; margin: auto;" class="text-light" href="{{ url_for(value)}}">{{key}}</a>
+            <a style = "display: block; text-align: center; max-width: 200px; margin: auto;" class="text-light" href="{{ url_for(value)}}" target="_blank">{{key}}</a>
         {% endfor %}
     </div>
     <a href="{{ url_for('wrappedRepeats') }}" style="text-decoration: none;">
