--- a/templates/base.html
+++ b/templates/base.html
@@ -4,64 +4,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
-<body style="background-color: #121212;">
-    <div style="padding:10px 0px 10px 0px">
-        <h1 class="text-center text-light" >Wrapped Repeats</h1>
-        <h5 class="text-center" style="color: #B3B3B3" >Displaying data from Your Top Songs of {{ years_string }}.</h5>
-    {% if wrappedLinks %}
-        <h6 class="text-center" style="padding:0px;"><span style="color: #ffffff; font-weight: bold;">Expecting more years?</span><span style="color: #ffffff"> Like these playlists below:</span></h6>
-        <p class="text-center text-light=" style="padding:0px; margin:0px">
-        {% for key, value in wrappedLinks.items() %}
-                <a style = "text-decoration: underline; color: #1db95477" href="{{ url_for(value)}}" target="_blank">{{key}}</a>
-            {% endfor %}
-        {% endif %}
-        </p>
-    </div>
-    
-    
-    <button type="button" class="btn btn-lg mt-2 mb-4" style="background-color: #1Db954; display: block; margin: auto; color:#121212; font-weight: bold;" onclick="buttonClicked()">Generate Playlist</button>
-    <script>
-        function buttonClicked() {
-            fetch('/makeplaylist')
-                .then(response => response.text())
-                .then(data => {
-                    window.open(data, '_blank')
-                })
-        }
-      </script>
-        <table class="table table-dark table-striped" style="background-color: #121212">
-        <thead style="background-color: #1Db954; color:#121212">
-            <tr >
-                <th>#</th>
-                <th></th>
-                <th>Name</th>
-                <th>Artist</th>
-                <th>Rank</th>
-                <th>Ocurrences</th>
-                <th>Years</th>
-            </tr>
-        </thead>
-        {% for row in rows %}
-            <tr>
-                <td>{{ row['count'] }}</td>
-                <td><img src="{{ row['image'] }}" alt="{{ row['name'] }} art" style="width: 48px; height: 48px;"></td>
-                <td>{{ row['name'] }}</td>
-                <td>{{ row['artist'] }}</td>
-                <td>{{ row['rank'] }}</td>
-                <td>{{ row['ocurrences'] }}</td>
-                <td>{{ row['years'] }}</td>
-            </tr>
-        {% endfor %}
-    </table>
-    <h2 class="text-center text-light mt-4 mb-3">Additional Stats</h2>
-    <p class="text-center text-light">
-        Your favorite artist was {{ funStats['topArtist'][0]}} with {{ funStats['topArtist'][1]}} appearances.</br>
-        Songs in your {{ funStats['topYear'][0]}} Wrapped were featured {{ funStats['topYear'][1]}} other times.</br>
-        {% for tup in funStats['sharedRank'] %}
-            {{ tup['name'] }} by {{ tup['artist'] }} was ranked exactly {{ tup['rank'] }} in both {{ tup['years'] }}.</br> 
-        {% endfor %}
-        {{ funStats['biggestGap'][0]}} by {{ funStats['biggestGap'][1]}} had the biggest gap between appearances with {{ funStats['biggestGap'][2]}} years between {{ funStats['biggestGap'][3]}}.
-    </p>
+<body>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
