--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,11 @@
-<html>
-<head>
-    <title>Wrapped Repeats</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
-</head>
-<body class="bg-dark">
+{% extends 'base.html'%}
+
+{% block content %}
     <h1 class="text-center text-light my-3">Wrapped Repeats</h1>
+    <div class = "infobox">
+        Ever wonder which songs you keep coming back to year after year? Wrapped Repeats has the answer. Now, you can effortlessly see which songs have shown up on multiple Wrapped playlists, along with their average ranking. Additionally, you can generate a playlist of your repeating songs, and see additional stats for extra fun.
+    </div>
     <a href="{{ auth_url }}}" style="text-decoration: none;">
-        <button type="button" class="btn btn-lg text-dark mt-4 mb-4" style="background-color: #1Db954; display: block; margin: auto;">Login to Spotify</button>
+        <button type="button" class="btn btn-lg mt-4 mb-4 login">Login to Spotify</button>
     </a>
-    
-</body>
-</html>
+{% endblock %}
