name change, added links

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Wrapped Repeats</title>
+    <title>Repeat Receipts</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
