--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'base.html'%}
 
 {% block content %}
-    <h1 class="text-center text-light my-3">Wrapped Repeats</h1>
+    <h1 class="text-center my-3">Repeat Receipts</h1>
     <div class = "infobox">
-        Ever wonder which songs you keep coming back to year after year? Wrapped Repeats has the answer. Now, you can effortlessly see which songs have shown up on multiple Wrapped playlists, along with their average ranking. Additionally, you can generate a playlist of your repeating songs, and see additional stats for extra fun.
+        Ever wonder which songs you keep coming back to year after year? Repeat Receipts has the answer. Now, you can effortlessly see which songs have shown up on multiple Wrapped playlists, along with their average ranking. Additionally, you can generate a playlist of your repeating songs, and see additional stats for extra fun.
     </div>
     <a href="{{ auth_url }}}" style="text-decoration: none;">
         <button type="button" class="btn btn-lg mt-4 mb-4 login">Login to Spotify</button>
