--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             fetch('/makeplaylist')
                 .then(response => response.text())
                 .then(data => {
-                    window.open(data, '_blank')
+                    window.open(data, '_blank', 'noopener noreferrer')
                 })
         }
       </script>
