--- a/templates/index.html
+++ b/templates/index.html
@@ -103,4 +103,8 @@
             <h2 class="text-center unique">No similarities found between Wrapped Playlists.</h2>
         {% endif %}
     {% endif %}
+    <footer class="text-center" >
+        <p class="footertext">Created by Brian Brown<br>
+            <a href="https://github.com/bbrown430/repeatreceipts" class="footerlink" target="_blank">GitHub</a><a href="https://www.bsquareddesigns.net/" class="footerlink" target="_blank">Portfolio</a></p>
+      </footer>
 {% endblock %}
