--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
+    <div>
     <h1 class="text-center my-3">Repeat Receipts</h1>
     <div class = "infobox">
         Ever wonder which songs you keep coming back to year after year? Repeat Receipts has the answer. Now, you can effortlessly see which songs have shown up on multiple Wrapped playlists, along with their average ranking. Additionally, you can generate a playlist of your repeating songs, and see additional stats for extra fun.
@@ -8,4 +9,8 @@
     <a href="{{ auth_url }}}" style="text-decoration: none;">
         <button type="button" class="btn btn-lg mt-4 mb-4 login">Login to Spotify</button>
     </a>
+    <footer class="text-center" >
+        <p class="footertext">Created by Brian Brown<br>
+            <a href="https://github.com/bbrown430/repeatreceipts" class="footerlink" target="_blank">GitHub</a><a href="https://www.bsquareddesigns.net/" class="footerlink" target="_blank">Portfolio</a></p>
+      </footer>
 {% endblock %}
