--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,31 @@
         
 
       </script>
+
+    <button id="share-button">Share</button>
+    <script>
+    // Get reference to the share button
+    const shareButton = document.getElementById("share-button");
+    
+    // Add an event listener to the share button
+    shareButton.addEventListener("click", () => {
+        // Use fetch or XMLHttpRequest to get the image data
+        fetch(" {{shareimage}} ")
+            .then(response => response.blob())
+            .then(blob => {
+                // Create a file object
+                const file = new File([blob], "image.jpg", { type: "image/jpeg" });
+                
+                // Use the `navigator.share()` method to share the file
+                navigator.share({
+                title: "My Repeat Beats",
+                text: "Check out your Repeat Beats at repeatreceipts.onrender.com",
+                files: [file]
+                });
+            });
+    });
+    </script>
+
     <p class="text-center disclaimer">Metadata provided by <img src="/static//spotifylogo.svg" alt="Spotify Logo" class="splogo"></p>
         <table class="table table-dark table-striped" style="background-color: #121212">
         <thead style="background-color: #1Db954; color:#121212">
