edge >5 songs img

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
                 <th></th>
                 <th>Name</th>
                 <th>Artist</th>
-                <th>Rank</th>
+                <th>Avg. Rank</th>
                 <th>Ocurrences</th>
                 <th>Years</th>
             </tr>
