updated readme and copy

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <div>
     <h1 class="text-center my-3">Repeat Receipts</h1>
     <div class = "infobox">
-        Ever wonder which songs you keep coming back to year after year? Repeat Receipts has the answer. Now, you can effortlessly see which songs have shown up on multiple Wrapped playlists, along with their average ranking. Additionally, you can generate a playlist of your repeating songs, and see additional stats for extra fun.
+        Ever wonder which songs you keep coming back to year after year? Repeat Receipts has the answer. Now, you can effortlessly see which songs have shown up on multiple Wrapped playlists, along with their average ranking. Other features include playlist generation, a story shareable image, and addition stats for extra fun.
     </div>
     <div class="buttondiv">
         <a href="{{ auth_url }}}" style="text-decoration: none;">
