updated links to new portfolio

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,6 @@
     {% endif %}
     <footer class="text-center" >
         <p class="footertext">Created by Brian Brown<br>
-            <a href="https://github.com/bbrown430/repeatreceipts" class="footerlink" target="_blank">GitHub</a><a href="https://www.bsquareddesigns.net/" class="footerlink" target="_blank">Portfolio</a></p>
+            <a href="https://github.com/bbrown430/repeatreceipts" class="footerlink" target="_blank">GitHub</a><a href="https://www.brianbrown.io/" class="footerlink" target="_blank">Portfolio</a></p>
       </footer>
 {% endblock %}
