--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 <a class="splink" href="{{ url_for(value)}}" target="_blank">{{key}}</a>
             {% endfor %}
     
-    (available years depends on account age)
+    (years available dependent on account age)
         </p>
     {% endif %}
     </div>
